--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adidas Perú</title>
-    <link rel="stylesheet" href="/css/Proyecto.css">
+    <link rel="stylesheet" href="Proyecto.css">
     <link rel="icon" href="../imagenes/icono adidas.png">
     
 </head>
