--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adidas Perú</title>
     <link rel="stylesheet" href="css/Proyecto.css">
-    <link rel="icon" href="../imagenes/icono adidas.png">
+    <link rel="icon" href="icono adidas.png">
     
 </head>
 <body>
@@ -28,7 +28,7 @@
 
     </div>
      <video autoplay loop muted>
-        <source src="../imagenes/video_principal.mp4"
+        <source src="video_principal.mp4"
          type="video/mp4">
     </video>
   
