--- a/paginas/Locales_Pagina.html
+++ b/paginas/Locales_Pagina.html
@@ -23,10 +23,10 @@
           <nav >
             <ul class="menu">
               <li><a href="../index.html"><strong>INICIO</strong></a></li>
-              <li><a href="paginas/AcercaDeNosotros.html"><strong>ACERCA DE NOSOTROS</strong></a></li>
+              <li><a href="AcercaDeNosotros.html"><strong>ACERCA DE NOSOTROS</strong></a></li>
                 
               <li class="dropdown2-li">
-                <a href="paginas/Calzado.html"><strong>CALZADO</strong></a> 
+                <a href="Calzado.html"><strong>CALZADO</strong></a> 
                 <ul class="dropdown2">                     
                 </ul>
               </li>
@@ -34,19 +34,19 @@
               <li class="dropdown-li">
                 <a href=""><strong>ROPA</strong></a> 
                 <ul class="dropdown">
-                  <li><a href="paginas/RopaHombres.html"> Hombres</a></li>
-                  <li><a href="paginas/RopaMujeres.html">Mujeres</a> </li>                    
+                  <li><a href="RopaHombres.html"> Hombres</a></li>
+                  <li><a href="RopaMujeres.html">Mujeres</a> </li>                    
                 </ul>
               </li>
                
               <li class="dropdown3-li">
-                <a href="paginas/Delivery_Pagina.html"><strong>ENVIOS</strong></a>
+                <a href="Delivery_Pagina.html"><strong>ENVIOS</strong></a>
                 <ul class="dropdown3">
                 </ul>              
               </li>
 
               <li>
-                <a href="paginas/Locales_Pagina.html"><strong>LOCALES</strong></a>
+                <a href="Locales_Pagina.html"><strong>LOCALES</strong></a>
               </li>
 
               <li class="dropdown4"></li>               
